cabal-version: 2.4
name: based
homepage: https://github.com/daig/based
version: 4.14.0.0.6
category: Prelude
synopsis: A minimalist base.
stability: cursed
bug-reports: https://github.com/daig/based/issues
author: Dai
maintainer: dai@sodality.cc
copyright: 2020 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/daig/based

common x
  default-language: Haskell2010
  default-extensions: AllowAmbiguousTypes, BangPatterns, BinaryLiterals, ConstraintKinds, DataKinds, DefaultSignatures, DeriveAnyClass, DeriveDataTypeable, DeriveGeneric, DeriveLift, DerivingStrategies, EmptyCase, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, MultiWayIf, NamedFieldPuns, NamedWildCards, NegativeLiterals, NumDecimals, OverloadedLabels, PartialTypeSignatures, PatternSynonyms, PolyKinds, RankNTypes, RecordWildCards, RecursiveDo, RoleAnnotations, ScopedTypeVariables, StandaloneDeriving, StrictData, TupleSections, TypeApplications, TypeFamilyDependencies, TypeOperators, ViewPatterns, ImpredicativeTypes, QuantifiedConstraints, NumericUnderscores, BlockArguments, DerivingVia
                    , UnicodeSyntax, PackageImports
library 
  import: x
  hs-source-dirs: src
  exposed-modules: Prelude, Ord, Eq, Debug
                 , I , U , F32, F64
                 , I.I8
                 , K, Result, Maybe
                 , Char
                 , Exception, Exception.Stack
                 , IO, ST
                 , Syntax, Syntax.Do, Syntax.String, Syntax.List, Syntax.Num
                 , Ref
                 , Ref.IO, Ref.IO.Lazy, Ref.IO.Atomic, Ref.IO.Atomic.Lazy
                 , Ref.ST, Ref.ST.Lazy, Ref.ST.Atomic, Ref.ST.Atomic.Lazy
  reexported-modules: Coerce, Syntax.ImplicitParam
  build-depends: microbase, prim, integer, base
